# work_demo

./: README.md  pyproject.toml
data/: synthetic_options.csv
documents/: top_prompt
documents/plan/: option_backtest_PLAN.md  synthetic_option_data_PLAN.md
documents/raw_plan/: option_backtest  synthetic_option_data.md
documents/report/: synthetic_option_data_REPORT.md
examples/: load_option_data.py  r-agenda
skills/agent_skills/: README.md
skills/agent_skills/.mplconfig/: fontlist-v330.json
skills/agent_skills/examples/: end_to_end_demo.py  house_demo.mplstyle
skills/agent_skills/shared/: conventions.md  sample_security_registry.yaml  security_registry.schema.md
skills/agent_skills/skills/market-data-loader/: SKILL.md
skills/agent_skills/skills/market-data-loader/references/: design.md  example-queries.md  market_data_loader_template.py  yaml-format.md
skills/agent_skills/skills/mpl-standard-plot/: SKILL.md
skills/agent_skills/skills/mpl-standard-plot/references/: chart-recipes.md  example-queries.md  mpl_standard_plot_template.py  style-contract.md
skills/agent_skills/skills/performance-report/: SKILL.md
skills/agent_skills/skills/performance-report/references/: example-queries.md  metrics-spec.md  (+3 more)
src/opt_research/: __init__.py  arbitrage_free.py  data_generator.py  option_chain.py  option_pricing.py  underlying.py  volatility_surface.py
src/opt_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_arbitrage_free.py  test_option_chain.py  test_option_pricing.py  test_underlying.py  test_volatility_surface.py
